# python_headline_style

./: LICENSE  README.md  README.rst  pyvenv.cfg  setup.cfg  setup.py
headLineStyle/: __init__.py  tests.py
headLineStyle/headline_style.egg-info/: PKG-INFO  entry_points.txt  requires.txt
headline_style.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
